--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@antfu/eslint-config": "^0.37.0",
+    "eslint": "^8.36.0",
+    "typescript": "^5.0.2",
     "vitest": "^0.29.7"
   }
 }
