--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.37.0",
     "eslint": "^8.36.0",
+    "jsdom": "^21.1.1",
     "typescript": "^5.0.2",
     "vitest": "^0.29.7"
   }
